# CircularSniffer

./: .gitignore  README.md  pyproject.toml
circularsniffer/: cli.py  file_functions.py
tests/: test_circularsniffer.py
