[tool.poetry]
name = "circularsniffer"
version = "0.1.0"
description = ""
authors = ["Jacob Howell <jhowell45@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
