[tool.poetry]
name = "circularsniffer"
version = "0.1.0"
description = ""
authors = ["Jacob Howell <jhowell45@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
black = "^18.3-alpha.0"

[tool.poetry.scripts]
sniffer = "circularsniffer.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
